--- a/report/project_report.html
+++ b/report/project_report.html
@@ -1740,27 +1740,66 @@ summary {
 <p>First, we apply a proportional odds model with the severity of an accident as the outcome, and start time ,&lt;—insert list of candidate variables—&gt;, as predictors. Based on paramter estimates of this model &lt;—potentially with penalization—&gt;, we identify variables that are most associated with severity. In parallel, starting with the same set of variables, we use random forest to find the predictors and build a model that best yields the best classification.</p>
 <div id="proportional-odds-model" class="section level2">
 <h2>Proportional Odds Model</h2>
-<p>For a single severity outcome <span class="math inline">\(Y_i\)</span> with covariates <span class="math inline">\(X_i\)</span>, the proportional odds model suggests that <span class="math display">\[ logit(P(Y_i\leq k))=log(\frac{P(Y_i\leq k)}{1-P(Y_i\leq k)}) = \alpha_k - x_i^T\beta\]</span> , where <span class="math inline">\(\beta = (\beta_1,...,\beta_p)^T\)</span>, <span class="math inline">\(x_i = (x_{i1},..., x_{ip})^T\)</span>, k=1, 2, and 3.</p>
+<p>For a single severity outcome <span class="math inline">\(Y_i\)</span> with covariates <span class="math inline">\(X_i\)</span>, the proportional odds model suggests that <span class="math display">\[
+  {\displaystyle
+    \begin{aligned}
+      logit(P(Y_i\leq k))=log(\frac{P(Y_i\leq k)}{1-P(Y_i\leq k)}) = \alpha_k - x_i^T\beta\\
+      &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad
+    \end{aligned}
+  }
+\]</span>, where <span class="math inline">\(\beta = (\beta_1,...,\beta_p)^T, x_i = (x_{i1},..., x_{ip})^T,\)</span> and <span class="math inline">\(k= 1, 2, 3\)</span>.</p>
 <p><br></p>
-<p>Equivalently, if we define <span class="math inline">\(\phi(t) = \frac{1}{1+exp(-t)}\)</span>, then <span class="math display">\[P(Y_i\leq k) = \frac{1}{1 + exp(x_i^T\beta-\alpha_k)} = \phi(\alpha_k-x_i^T\beta)\]</span>.</p>
+<p>Equivalently, if we define <span class="math inline">\(\phi(t) = \frac{1}{1+exp(-t)}\)</span>, then <span class="math display">\[  
+{\displaystyle
+    \begin{aligned}
+P(Y_i\leq k) = \frac{1}{1 + exp(x_i^T\beta-\alpha_k)} = \phi(\alpha_k-x_i^T\beta).&amp;\\
+                                   &amp; \qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\ 
+    \end{aligned}
+  }  
+\]</span></p>
+<p>If we define <span class="math inline">\(\alpha = (\alpha_1,\alpha_2, \alpha_3)^T\)</span>, then log likelihood function for n accidents is therefore given by <span class="math display">\[
+  {\displaystyle
+    \begin{aligned}
+l(\alpha, \beta)&amp;= \sum_{i=1}^n\sum_{k=1}^4I(Y_i=k)log(P(Y_i=k))\\
+                &amp;=\sum_{i=1}^n \{I(Y_i=1)log(P(Yi\le1))+ I(Y_i=2)[log(P(Yi\le2)-P(Y_i\le1)] + I(Y_i=3)[log(P(Yi\le3)-P(Y_i\le2)] + I(Y_i=4)[log(1-P(Y_i\le3)]\}\\
+                &amp;=\sum_{i=1}^n\{I(Y_i=1)log(\phi(\alpha1-x_i^T\beta))+ I(Y_i=2)log(\phi(\alpha2-x_i^T\beta)-\phi(\alpha1-x_i^T\beta))+ I(Y_i=3)log(\phi(\alpha3-x_i^T\beta) -\phi(\alpha2-x_i^T\beta))+ I(Y_i=4)log(1-\phi(\alpha3-x_i^T\beta))\}
+    \end{aligned}
+  }
+\]</span>.</p>
+<p>The gradient is <span class="math display">\[
+  {\displaystyle
+    \begin{aligned}
+(\frac{\partial l(\alpha, \beta)}{\partial \beta_1}, ..., \frac{\partial l(\alpha, \beta)}{\partial \beta_p}, \frac{\partial l(\alpha, \beta)}{\partial \alpha_1},..., \frac{\partial l(\alpha, \beta)}{\partial \alpha_3})^T&amp;\\
+                                   &amp; \qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp;\qquad\qquad\qquad &amp; 
+    \end{aligned}
+  }
+\]</span></p>
+<p>, with the individual elements given below.</p>
 <p><br></p>
-<p>If we define <span class="math inline">\(\alpha = (\alpha_1,\alpha_2, \alpha_3)^T\)</span>, then log likelihood function for n accidents is therefore given by <span class="math display">\[l(\alpha, \beta) = \sum_{i=1}^n\sum_{k=1}^4I(Y_i=k)log(P(Y_i=k))\\
-=\sum_{i=1}^n \{I(Y_i=1)log(P(Yi\le1))+ I(Y_i=2)[log(P(Yi\le2)-P(Y_i\le1)] + I(Y_i=3)[log(P(Yi\le3)-P(Y_i\le2)] + I(Y_i=4)[log(1-P(Y_i\le3)]\}\\
-=\sum_{i=1}^n\{I(Y_i=1)log(\phi(\alpha1-x_i^T\beta))+ I(Y_i=2)log(\phi(\alpha2-x_i^T\beta)-\phi(\alpha1-x_i^T\beta))+ I(Y_i=3)log(\phi(\alpha3-x_i^T\beta) -\phi(\alpha2-x_i^T\beta))+ I(Y_i=4)log(1-\phi(\alpha3-x_i^T\beta))\}\]</span>.</p>
-<p><br> <br></p>
-<p>The gradient is <span class="math inline">\((\frac{\partial l(\alpha, \beta)}{\partial \beta_1}, ..., \frac{\partial l(\alpha, \beta)}{\partial \beta_p}, \frac{\partial l(\alpha, \beta)}{\partial \alpha_1},..., \frac{\partial l(\alpha, \beta)}{\partial \alpha_3})^T\)</span>, and the individual elements are given below.</p>
-<p><br></p>
-<p><span class="math display">\[\frac{\partial l(\alpha, \beta)}{\partial \beta_j}
-= \sum_{i=1}^n\left(-I(Y_i=1)\frac{exp(x_i^T\beta-\alpha_1)}{1+exp(x_i^T\beta-\alpha_1)}x_{ij} + I(Y_i=2)\frac{\frac{exp(x_i^T\beta-\alpha_1)}{[1+exp(x_i^T\beta-\alpha_1)]^2}-\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)}x_{ij} + I(Y_i=3)\frac{\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}-\frac{exp(x_i^T\beta-\alpha_3)}{[1+exp(x_i^T\beta-\alpha_3)]^2}}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)}x_{ij} + I(Y_i=4)\frac{x_{ij}}{1+exp(x_i^T\beta-\alpha_3)}\right)\\
-=\sum_{i=1}^n\left(-I(Y_i=1)(1-\phi(\alpha_1-x_i^T\beta)) + I(Y_i=2)\frac{\phi(\alpha_1-x_i^T\beta)[1-\phi(\alpha_1-x_i^T\beta)]-\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} + I(Y_i=3)\frac{\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]-\phi(\alpha_3-x_i^T\beta)[1-\phi(\alpha_3-x_i^T\beta)]}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} + I(Y_i=4)\phi(\alpha_3-x_i^T\beta)\right)x_{ij}\]</span><br />
- </p>
-<p><span class="math display">\[ \frac{\partial l(\alpha, \beta)}{\partial \alpha_1} = \sum_{i=1}^n \left( I(Y_i=1)\frac{exp(x_i^T\beta-\alpha_1)}{1+exp(x_i^T\beta-\alpha_1)}-I(Y_i=2)\frac{\frac{exp(x_i^T\beta-\alpha_1)}{[1+exp(x_i^T\beta-\alpha_1)]^2}}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} \right)\\
-=\sum_{i=1}^n\left( I(Y_i=1)[1-\phi(\alpha_1-x_i^T\beta)] - I(Y_i=2)\frac{\phi(\alpha_1-x_i^T\beta)[1-\phi(\alpha_1-x_i^T\beta)]}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} \right)\]</span><br />
- </p>
-<p><span class="math display">\[ \frac{\partial l(\alpha, \beta)}{\partial \alpha_2} = \sum_{i=1}^n \left( I(Y_i=2)\frac{\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)}-I(Y_i=3)\frac{\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} \right)\\
-=\sum_{i=1}^n\left( I(Y_i=2)\frac{\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} - I(Y_i=3)\frac{\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} \right)\]</span><br />
- </p>
-<p><span class="math display">\[ \frac{\partial l(\alpha, \beta)}{\partial \alpha_3} = \sum_{i=1}^n \left( I(Y_i=3)\frac{\frac{exp(x_i^T\beta-\alpha_3)}{[1+exp(x_i^T\beta-\alpha_3)]^2}}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)}-I(Y_i=4)\frac{\frac{exp(x_i^T\beta-\alpha_3)}{[1+exp(x_i^T\beta-\alpha_3)]^2}}{1-\phi(\alpha_3-x_i^T\beta)} \right)\\=\sum_{i=1}^n\left( I(Y_i=3)\frac{\phi(\alpha_3-x_i^T\beta)[1-\phi(\alpha_3-x_i^T\beta)]}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} - I(Y_i=4)\frac{\phi(\alpha_3-x_i^T\beta)[1-\phi(\alpha_3-x_i^T\beta)]}{1-\phi(\alpha_3-x_i^T\beta)} \right)\]</span></p>
+<p><span class="math display">\[
+  {\displaystyle
+    \begin{aligned}
+\frac{\partial l(\alpha, \beta)}{\partial \beta_j}
+&amp;= \sum_{i=1}^n\left(-I(Y_i=1)\frac{exp(x_i^T\beta-\alpha_1)}{1+exp(x_i^T\beta-\alpha_1)}x_{ij} + I(Y_i=2)\frac{\frac{exp(x_i^T\beta-\alpha_1)}{[1+exp(x_i^T\beta-\alpha_1)]^2}-\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)}x_{ij} + I(Y_i=3)\frac{\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}-\frac{exp(x_i^T\beta-\alpha_3)}{[1+exp(x_i^T\beta-\alpha_3)]^2}}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)}x_{ij} + I(Y_i=4)\frac{x_{ij}}{1+exp(x_i^T\beta-\alpha_3)}\right)\\
+&amp;=\sum_{i=1}^n\left(-I(Y_i=1)(1-\phi(\alpha_1-x_i^T\beta)) + I(Y_i=2)\frac{\phi(\alpha_1-x_i^T\beta)[1-\phi(\alpha_1-x_i^T\beta)]-\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} + I(Y_i=3)\frac{\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]-\phi(\alpha_3-x_i^T\beta)[1-\phi(\alpha_3-x_i^T\beta)]}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} + I(Y_i=4)\phi(\alpha_3-x_i^T\beta)\right)x_{ij}\\
+\\
+\frac{\partial l(\alpha, \beta)}{\partial \alpha_1} &amp;= \sum_{i=1}^n \left( I(Y_i=1)\frac{exp(x_i^T\beta-\alpha_1)}{1+exp(x_i^T\beta-\alpha_1)}-I(Y_i=2)\frac{\frac{exp(x_i^T\beta-\alpha_1)}{[1+exp(x_i^T\beta-\alpha_1)]^2}}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} \right)\\
+&amp;=\sum_{i=1}^n\left( I(Y_i=1)[1-\phi(\alpha_1-x_i^T\beta)] - I(Y_i=2)\frac{\phi(\alpha_1-x_i^T\beta)[1-\phi(\alpha_1-x_i^T\beta)]}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} \right)\\
+\\
+     \end{aligned}
+  }
+\]</span></p>
+<p><span class="math display">\[
+  {\displaystyle
+    \begin{aligned}
+\frac{\partial l(\alpha, \beta)}{\partial \alpha_2} &amp;= \sum_{i=1}^n \left( I(Y_i=2)\frac{\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)}-I(Y_i=3)\frac{\frac{exp(x_i^T\beta-\alpha_2)}{[1+exp(x_i^T\beta-\alpha_2)]^2}}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} \right)\\
+&amp;=\sum_{i=1}^n\left( I(Y_i=2)\frac{\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]}{\phi(\alpha_2-x_i^T\beta)-\phi(\alpha_1-x_i^T\beta)} - I(Y_i=3)\frac{\phi(\alpha_2-x_i^T\beta)[1-\phi(\alpha_2-x_i^T\beta)]}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} \right)\\
+\\    
+\frac{\partial l(\alpha, \beta)}{\partial \alpha_3} &amp;= \sum_{i=1}^n \left( I(Y_i=3)\frac{\frac{exp(x_i^T\beta-\alpha_3)}{[1+exp(x_i^T\beta-\alpha_3)]^2}}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)}-I(Y_i=4)\frac{\frac{exp(x_i^T\beta-\alpha_3)}{[1+exp(x_i^T\beta-\alpha_3)]^2}}{1-\phi(\alpha_3-x_i^T\beta)} \right)\\                       
+&amp;=\sum_{i=1}^n\left( I(Y_i=3)\frac{\phi(\alpha_3-x_i^T\beta)[1-\phi(\alpha_3-x_i^T\beta)]}{\phi(\alpha_3-x_i^T\beta)-\phi(\alpha_2-x_i^T\beta)} - I(Y_i=4)\frac{\phi(\alpha_3-x_i^T\beta)[1-\phi(\alpha_3-x_i^T\beta)]}{1-\phi(\alpha_3-x_i^T\beta)} \right)      \qquad\qquad\qquad\qquad
+  \end{aligned}
+  }
+\]</span></p>
 </div>
 <div id="random-forest" class="section level2">
 <h2>Random Forest</h2>
